--- a/initial_conditions/music_parameter_files/ics_hydro_generic_256_50Mpc.conf
+++ b/initial_conditions/music_parameter_files/ics_hydro_generic_256_50Mpc.conf
@@ -14,14 +14,14 @@ periodic_TF		= yes
 [cosmology]
 Omega_m			= 0.3111
 Omega_L			= 0.6889
-w0			= -1.0
-wa			= 0.0
+w0		    	= -1.0
+wa			    = 0.0
 Omega_b			= 0.0497
-H0			= 67.66
+H0			    = 67.66
 sigma_8			= 0.8102
-nspec			= 0.9665
+nspec			  = 0.9665
 transfer		= eisenstein
-YHe = 0
+YHe         = 0
 
 
 [random]
@@ -33,16 +33,11 @@ seed[11]		= 56789
 seed[12]		= 67890
 
 
-UnitLength_in_cm = 3.08568025e21
-UnitMass_in_g = 1.989e43
-UnitVelocity_in_cm_per_s = 1e5
+
 
 [output]
-
-##ENZO - also outputs the settings for the parameter file
-##requires HDF5 installation and HDF5 enabled in Makefile
-format			= enzo
-filename		= /raid/bruno/data/cosmo_sims/ics/enzo/256_hydro_50Mpc/raw
+format			= generic
+filename		= /raid/bruno/data/cosmo_sims/ics/generic/256_hydro_50Mpc/ics_generic.h5
 
 [poisson]
 fft_fine		= yes
